<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity"
    android:padding="20dp"
    android:background="@drawable/backg"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/instructionsTitle"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/instructions"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnStartPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:padding="10dp"/>

</LinearLayout>