<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".InstructionsActivity"
    android:background="@drawable/backg">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X score"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txvXscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorGray"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="0"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:textColor="@color/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draws"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txvDraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorGray"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="0"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="O score"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txvYscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorGray"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="0"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/txvTurnID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn"
        android:textColor="@color/colorAccent"
        android:textSize="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/btnPosition0"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorGray"
                android:textSize="25sp"
                android:textColor="@color/colorBlack"
               />

            <Button
                android:id="@+id/btnPosition3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorGray"
               android:textSize="25sp"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/btnPosition6"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorGray"
               android:textSize="25sp"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/btnPosition1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorGray"
                android:textSize="25sp"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/btnPosition4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorGray"
                android:textSize="25sp"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/btnPosition7"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorGray"
                android:textSize="25sp"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnPosition2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorGray"
                android:textSize="25sp"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/btnPosition5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorGray"
                android:textSize="25sp"
                android:textColor="@color/colorBlack" />

            <Button
                android:id="@+id/btnPosition8"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorGray"
                android:textSize="25sp"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnPlayAgainID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/play_again"
        android:textColor="@color/white" />
</LinearLayout>
